# huffman-archiver

./: CMakeLists.txt  README.md
include/: HuffmanArchiver.h  HuffmanNode.h  HuffmanTree.h  MyException.h  functions_test.h
src/: HuffmanArchiver.cpp  HuffmanNode.cpp  HuffmanTree.cpp  MyException.cpp  main.cpp
test/: functions_test.cpp  lib-test.cpp  one_letter_file.txt  random10b.txt  random1kb.txt
